# cse599d1-final-project

./: README.md  datasets.py  finite-eval.py  models.py  ntk-eval.py  opt.py  pyproject.toml  train.py  utils.py
