[tool.poetry]
name = "ntk-adversarial"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda112/jaxlib-0.1.61+cuda112-cp39-none-manylinux2010_x86_64.whl"}
jax = "^0.2.9"
Keras = "^2.4.3"
cleverhans = {git = "https://github.com/cleverhans-lab/cleverhans.git"}
scipy = "^1.6.1"
tensorflow-datasets = "^4.2.0"
neural-tangents = "^0.3.6"
tf-nightly = "^2.5.0-alpha.20210303"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
